--- a/shared/assets/styles/base.css
+++ b/shared/assets/styles/base.css
@@ -101,7 +101,8 @@ dd::after {
 /* Section
 ############################################################################ */
 
-section, .section {
+section,
+.section {
   max-width: var(--max-width);
 
   p+p {
@@ -155,7 +156,8 @@ header {
 /* Button
 ############################################################################ */
 
-button, .button {
+button,
+.button {
   display: inline-block;
   background-color: transparent;
   margin-top: 0.5em;
@@ -261,7 +263,8 @@ pre {
 /* Lists
 ############################################################################ */
 
-ul, ol {
+ul,
+ol {
   margin-top: 1em;
   margin-bottom: 1em;
   padding-left: 1rem;
@@ -280,13 +283,14 @@ ul, ol {
 /* Table
 ############################################################################ */
 
-table{
+table {
   width: 100%;
   border-collapse: no-collapse;
   margin-top: 1em;
   margin-bottom: 1em;
 
-  th, td {
+  th,
+  td {
     padding: 0.5rem;
     border: 1px solid #ccc;
     text-align: left;
@@ -302,10 +306,77 @@ table{
     background-color: var(--darken);
   }
 
-    tr:nth-child(odd) {
+  tr:nth-child(odd) {
     background-color: var(--lighten);
   }
 }
+
+/* Unit
+############################################################################ */
+
+.collapsible .collapse-toggle {
+  all: unset;
+  cursor: pointer;
+  font-size: 1em;
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.collapsible{
+  border-top: solid 3px var(--darken);
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  transition: all 0.6s ease;
+  margin-top: 5rem;
+}
+
+.collapsible + .collapsible {
+  margin-top: 0;
+}
+
+
+.collapsible h2 {
+  transition: all 0.6s ease;
+  font-size: 2.5rem;
+  padding-top: 0;
+  margin-bottom: 0;
+  line-height: 100%;
+}
+
+.collapsible .arrow {
+  transition: transform 0.3s ease;
+  display: inline-block;
+  transform: scale(0.5);
+}
+
+.collapsible .content {
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.6s ease;
+  opacity: 0;
+  padding-left: 1.5em;
+}
+
+.collapsible.open {
+  .arrow {
+    transform: rotate(90deg) scale(0.5);
+  }
+
+  .content {
+    max-height: 21000px;
+    /* hoch genug für Inhalt */
+    opacity: 1;
+    padding-bottom: 5em;
+  }
+
+  h2{
+    transform: scale(0.8);
+    transform-origin: left;
+    padding-bottom: 1em;
+  }
+}
+
 
 /* Utilities
 ############################################################################ */
