--- a/shared/assets/styles/base.css
+++ b/shared/assets/styles/base.css
@@ -227,7 +227,7 @@ footer {
 .hero-text {
   max-width: var(--max-width);
   font-size: 1.5rem;
-  padding-bottom: 1em;
+  padding-bottom: 3em;
 }
 
 /* Code
@@ -283,7 +283,7 @@ ol {
 /* Table
 ############################################################################ */
 
-table {
+table.is-simple {
   width: 100%;
   border-collapse: no-collapse;
   margin-top: 1em;
@@ -323,7 +323,7 @@ table {
   gap: 0.5em;
 }
 
-.collapsible{
+.collapsible {
   border-top: solid 3px var(--darken);
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -331,7 +331,7 @@ table {
   margin-top: 5rem;
 }
 
-.collapsible + .collapsible {
+.collapsible+.collapsible {
   margin-top: 0;
 }
 
@@ -342,6 +342,7 @@ table {
   padding-top: 0;
   margin-bottom: 0;
   line-height: 100%;
+  transform-origin: left;
 }
 
 .collapsible .arrow {
@@ -354,7 +355,6 @@ table {
   overflow: hidden;
   max-height: 0;
   transition: max-height 0.6s ease;
-  opacity: 0;
   padding-left: 1.5em;
 }
 
@@ -370,9 +370,9 @@ table {
     padding-bottom: 5em;
   }
 
-  h2{
+  h2 {
     transform: scale(0.8);
-    transform-origin: left;
+
     padding-bottom: 1em;
   }
 }
