--- a/shared/assets/styles/base.css
+++ b/shared/assets/styles/base.css
@@ -2,13 +2,17 @@
   --bg-color: #cbcbc2;
   --text-color: #222;
   --accent-color: #9313ce;
+  --decoration-color: #1EC2A6;
   --darken: hsla(0, 0%, 0%, 0.2);
   --lighten: hsla(0, 0%, 100%, 0.2);
   --font-sans: 'Segoe UI', Roboto, 'Helvetica Neue', sans-serif;
   --font-mono: 'Fira Code', 'Courier New', monospace;
-  scroll-behavior: smooth;
-
+  --font-icons: "Material Icons";
   --max-width: 70rem;
+  --fw-normal: 400;
+  --fw-medium: 500;
+  --fw-bold: 600;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -17,13 +21,15 @@ body {
   font-family: var(--font-sans);
   padding: 2rem;
   padding-bottom: 10rem;
+  font-weight: var(--fw-normal);
+  font-size: 20px;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  font-weight: 600;
+  font-weight: var(--fw-bold);
   letter-spacing: -0.5px;
   color: var(--text-color);
   margin-bottom: 1em;
@@ -31,17 +37,6 @@ h4 {
   text-wrap: balance;
 }
 
-code{
-  font-family: var(--font-mono);
-}
-
-pre {
-  font-family: var(--font-mono);
-  background-color: #eaeaea;
-  padding: 0.2rem 0.4rem;
-  border-radius: 4px;
-  color: #111;
-}
 
 a {
   color: var(--accent-color);
@@ -229,15 +224,36 @@ footer {
 
 .hero-text {
   max-width: var(--max-width);
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   padding-bottom: 3em;
+
+  .is-small{
+    font-size: 0.8em;
+    font-weight: var(--fw-bold);
+    opacity: 0.8;
+  }
+
+  .is-important {
+    font-size: clamp(1.2rem, 4vw + 0.5rem, 2em);
+    max-width: calc(var(--max-width) * 1.3);
+    line-height: 110%;
+  }
+
+  .is-small + .is-important {
+    margin-top: 0.1em;
+  }
 }
 
 /* Code
 ############################################################################ */
 
+
 pre{
   background-color: #fff !important;
+  font-family: var(--font-mono);
+  padding: 0.2rem 0.4rem;
+  border-radius: 4px;
+  color: #111;
 
   .hljs-ln-n {
     opacity: 0.5;
@@ -263,7 +279,12 @@ pre {
 }
 
 code:not(pre code){
-  font-style: italic;
+  font-family: var(--font-mono);
+  font-weight: var(--fw-bold);
+  color: var(--decoration-color);
+  background-color: var(--text-color);
+  padding-left: 0.5em;
+  padding-right: 0.5em;
 }
 
 /* Lists
@@ -340,7 +361,6 @@ table.is-simple {
   margin-top: 0;
 }
 
-
 .collapsible h2 {
   transition: all 0.6s ease;
   font-size: 2.5rem;
@@ -361,18 +381,21 @@ table.is-simple {
 .collapsible .content {
   overflow: hidden;
   max-height: 0;
-  transition: max-height 0.6s ease;
+  transition: all 0.6s ease;
   padding-left: 1.5em;
+  padding-bottom: 0;
+  opacity: 0;
 }
 
 .collapsible.open {
+
+
   .arrow {
     transform: rotate(90deg) scale(0.5);
   }
 
   .content {
     max-height: 21000px;
-    /* hoch genug für Inhalt */
     opacity: 1;
     padding-bottom: 5em;
   }
@@ -391,4 +414,17 @@ table.is-simple {
 .mv-xl {
   margin-top: 3rem;
   margin-bottom: 3rem;
+}
+
+.mb-s {
+  margin-bottom: 0.2em;
+}
+
+.pt-xl{
+  padding-top: 3rem;
+}
+
+.mv-fluid-xl  {
+  margin-top: 10vw;
+  margin-bottom: 10vw;
 }
