--- a/shared/assets/styles/base.css
+++ b/shared/assets/styles/base.css
@@ -412,6 +412,18 @@ table.is-simple {
   }
 }
 
+/* Figure
+############################################################################ */
+
+figure.image{
+  max-width: 66.66%;
+
+  img{
+    width: 100%;
+  }
+
+  margin-bottom: 3rem;
+}
 
 /* Utilities
 ############################################################################ */
