--- a/shared/assets/styles/base.css
+++ b/shared/assets/styles/base.css
@@ -338,6 +338,33 @@ table.is-simple {
   }
 }
 
+table.is-reduced {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
+  margin-top: 1em;
+  margin-bottom: 1em;
+
+  th,
+  td {
+    padding: 0.5rem;
+    text-align: left;
+  }
+
+  th {
+    font-weight: bold;
+  }
+
+
+  tr{
+
+
+    th, td{
+      border-bottom: solid 1px var(--darken);
+    }
+  }
+}
+
 /* Unit
 ############################################################################ */
 
